[package]
name = "tiger"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.3", features = ["derive"] }
color-eyre = "0.6.2"
log = "0.4.17"
miette = { version = "5.5.0", features = ["fancy"] }
nom = "7.1.3"
nom-recursive = { version = "0.4.0", features = [] }
nom-supreme = "0.8.0"
nom-tracable = { version = "0.8.0", features = [] }
nom_locate = "4.1.0"
simple_logger = "4.0.0"
thiserror = "1.0.38"

[features]
default = []
trace = ["nom-tracable/trace"]
